server/assets/docs/css/components/toc.css
#docs-toc {
  display: flex;
  position: sticky;
  top: var(--docs-nav-height);
  flex-direction: column;
  align-self: start;
  justify-self: end;
  gap: var(--noora-spacing-3);
  z-index: 1;
  padding: var(--noora-spacing-7) var(--noora-spacing-2) var(--noora-spacing-7) var(--noora-spacing-2);
  width: 100%;
  max-width: 250px;
  max-height: calc(100vh - var(--docs-nav-height));

  & > [data-part="toc-actions"] {
    display: flex;
    flex-shrink: 0;
    align-items: center;

    & #docs-copy-dropdown {
      width: fit-content;

      & .noora-dropdown-content {
        width: 280px;
        box-shadow: var(--noora-border-light-default);
      }
    }
  }

  & > [data-part="toc-header"] {
    display: flex;
    flex-shrink: 0;
    align-items: center;
    gap: var(--noora-spacing-2);
    padding: var(--noora-spacing-7) 0 0 0;
    color: var(--noora-surface-label-primary);

    & svg {
      flex-shrink: 0;
    }

    & span {
      font: var(--noora-font-weight-medium) var(--noora-font-body-medium);
    }
  }

  & > [data-part="list"] {
    display: flex;
    flex-direction: column;
    margin: 0;
    border-left: 1.5px solid var(--noora-surface-border-primary);
    padding: 0;
    min-width: 0;
    min-height: 0;
    overflow-y: auto;
    scrollbar-width: none;
    list-style: none;

    [data-part="item"] {
      min-width: 0;

      & a {
        display: block;
        transition: color 0.15s;
        padding: var(--noora-spacing-2) var(--noora-spacing-4);
        overflow: hidden;
        color: var(--noora-surface-label-secondary);
        font: var(--noora-font-weight-regular) var(--noora-font-body-medium);
        text-decoration: none;
        text-overflow: ellipsis;
        white-space: nowrap;

        &:hover {
          color: var(--noora-surface-label-primary);
        }

        &[data-level="3"] {
          padding-left: var(--noora-spacing-8);
        }

        &[data-level="4"] {
          padding-left: var(--noora-spacing-11);
        }
      }
    }
  }
}

